src/test/ui/object-safety-mentions-Self.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:27:1
   |
LL | fn make_bar<T:Bar>(t: &T) -> &Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` references the `Self` type in its arguments or return type

error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-mentions-Self.rs:32:1
   |
LL | fn make_baz<T:Baz>(t: &T) -> &Baz {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Baz` cannot be made into an object
   |
   = note: method `bar` references the `Self` type in its arguments or return type

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0038"
